charon/tests/ui/simple/closure-with-drops.out
error: Found inconsistent generics after translation:
       Mismatched trait parent clauses:
       target: FnOnce
       expected: [[@TraitClause0]: MetaSized<Self>, [@TraitClause1]: Sized<Args>, [@TraitClause2]: Tuple<Args>, [@TraitClause3]: Drop<Self>, [@TraitClause4]: Drop<Args>, [@TraitClause5]: Sized<Self::Output>, [@TraitClause6]: Drop<Self::Output>]
            got: [MetaSized<test_crate::foo::closure<T>[@TraitClause0, @TraitClause1]>, Sized<()>, Tuple<()>, Sized<()>]
       Visitor stack:
         charon_lib::ast::gast::TraitImpl
       Binding stack (depth 1):
         0: <T, [@TraitClause0]: @TraitDecl0<missing(@Type1_0)>, [@TraitClause1]: @TraitDecl1<missing(@Type1_0)>>
 --> tests/ui/simple/closure-with-drops.rs:4:13
  |
4 |     let _ = || drop(x);
  |             ^^^^^^^^^^

error: Found inconsistent generics after translation:
       Mismatched trait parent clauses:
       target: FnOnce
       expected: [[@TraitClause0]: MetaSized<Self>, [@TraitClause1]: Sized<Args>, [@TraitClause2]: Tuple<Args>, [@TraitClause3]: Drop<Self>, [@TraitClause4]: Drop<Args>, [@TraitClause5]: Sized<Self::Output>, [@TraitClause6]: Drop<Self::Output>]
            got: [MetaSized<test_crate::bar::closure>, Sized<()>, Tuple<()>, Sized<()>]
       Visitor stack:
         charon_lib::ast::gast::TraitImpl
       Binding stack (depth 1):
         0: 
 --> tests/ui/simple/closure-with-drops.rs:8:13
  |
8 |     let x = || {};
  |             ^^^^^

error: Found inconsistent generics after translation:
       Mismatched trait parent clauses:
       target: FnMut
       expected: [[@TraitClause0]: MetaSized<Self>, [@TraitClause1]: FnOnce<Self, Args>, [@TraitClause2]: Sized<Args>, [@TraitClause3]: Tuple<Args>, [@TraitClause4]: Drop<Self>, [@TraitClause5]: Drop<Args>]
            got: [MetaSized<test_crate::bar::closure>, {impl FnOnce<()> for test_crate::bar::closure}, Sized<()>, Tuple<()>]
       Visitor stack:
         charon_lib::ast::gast::TraitImpl
       Binding stack (depth 1):
         0: 
 --> tests/ui/simple/closure-with-drops.rs:8:13
  |
8 |     let x = || {};
  |             ^^^^^

error: Found inconsistent generics after translation:
       Mismatched trait parent clauses:
       target: Fn
       expected: [[@TraitClause0]: MetaSized<Self>, [@TraitClause1]: FnMut<Self, Args>, [@TraitClause2]: Sized<Args>, [@TraitClause3]: Tuple<Args>, [@TraitClause4]: Drop<Self>, [@TraitClause5]: Drop<Args>]
            got: [MetaSized<test_crate::bar::closure>, {impl FnMut<()> for test_crate::bar::closure}, Sized<()>, Tuple<()>]
       Visitor stack:
         charon_lib::ast::gast::TraitImpl
       Binding stack (depth 1):
         0: 
 --> tests/ui/simple/closure-with-drops.rs:8:13
  |
8 |     let x = || {};
  |             ^^^^^

error: Found inconsistent generics after transformations:
       Mismatched trait parent clauses:
       target: FnOnce
       expected: [[@TraitClause0]: MetaSized<Self>, [@TraitClause1]: Sized<Args>, [@TraitClause2]: Tuple<Args>, [@TraitClause3]: Drop<Self>, [@TraitClause4]: Drop<Args>, [@TraitClause5]: Sized<Self::Output>, [@TraitClause6]: Drop<Self::Output>]
            got: [MetaSized<test_crate::foo::closure<T>[@TraitClause0, @TraitClause1]>, Sized<()>, Tuple<()>, Sized<()>]
       Visitor stack:
         charon_lib::ast::gast::TraitImpl
       Binding stack (depth 1):
         0: <T, [@TraitClause0]: @TraitDecl0<missing(@Type1_0)>, [@TraitClause1]: @TraitDecl1<missing(@Type1_0)>>
 --> tests/ui/simple/closure-with-drops.rs:4:13
  |
4 |     let _ = || drop(x);
  |             ^^^^^^^^^^

error: Found inconsistent generics after transformations:
       Mismatched trait parent clauses:
       target: FnOnce
       expected: [[@TraitClause0]: MetaSized<Self>, [@TraitClause1]: Sized<Args>, [@TraitClause2]: Tuple<Args>, [@TraitClause3]: Drop<Self>, [@TraitClause4]: Drop<Args>, [@TraitClause5]: Sized<Self::Output>, [@TraitClause6]: Drop<Self::Output>]
            got: [MetaSized<test_crate::bar::closure>, Sized<()>, Tuple<()>, Sized<()>]
       Visitor stack:
         charon_lib::ast::gast::TraitImpl
       Binding stack (depth 1):
         0: 
 --> tests/ui/simple/closure-with-drops.rs:8:13
  |
8 |     let x = || {};
  |             ^^^^^

error: Found inconsistent generics after transformations:
       Mismatched trait parent clauses:
       target: FnMut
       expected: [[@TraitClause0]: MetaSized<Self>, [@TraitClause1]: FnOnce<Self, Args>, [@TraitClause2]: Sized<Args>, [@TraitClause3]: Tuple<Args>, [@TraitClause4]: Drop<Self>, [@TraitClause5]: Drop<Args>]
            got: [MetaSized<test_crate::bar::closure>, {impl FnOnce<()> for test_crate::bar::closure}, Sized<()>, Tuple<()>]
       Visitor stack:
         charon_lib::ast::gast::TraitImpl
       Binding stack (depth 1):
         0: 
 --> tests/ui/simple/closure-with-drops.rs:8:13
  |
8 |     let x = || {};
  |             ^^^^^

error: Found inconsistent generics after transformations:
       Mismatched trait parent clauses:
       target: Fn
       expected: [[@TraitClause0]: MetaSized<Self>, [@TraitClause1]: FnMut<Self, Args>, [@TraitClause2]: Sized<Args>, [@TraitClause3]: Tuple<Args>, [@TraitClause4]: Drop<Self>, [@TraitClause5]: Drop<Args>]
            got: [MetaSized<test_crate::bar::closure>, {impl FnMut<()> for test_crate::bar::closure}, Sized<()>, Tuple<()>]
       Visitor stack:
         charon_lib::ast::gast::TraitImpl
       Binding stack (depth 1):
         0: 
 --> tests/ui/simple/closure-with-drops.rs:8:13
  |
8 |     let x = || {};
  |             ^^^^^

ERROR Charon failed to translate this code (8 errors)
